<resources>
    <string name="app_name">SOSU System</string>
    <string name="phone">Telefonnummer</string>
    <string name="email">Email</string>
    <string name="name">Navn</string>
    <string name="address">Addresse</string>
    <string name="add_subject">Tilføj borger</string>
    <string name="general_information">Generelle Oplysninger</string>
    <string name="health_condition">Helbredstilstand</string>
    <string name="title">Titel</string>
    <string name="hint_comment">Kommentar</string>
    <string name="save">Gem</string>
    <string name="delete">Slet</string>
    <string name="first_name">Fornavn</string>
    <string name="last_name">Efternavn</string>
    <string name="city">By</string>
    <string name="street">Gade</string>
    <string name="post_code">Postnummer</string>
    <string name="refresh">Opdater Listen</string>
    <string name="sub_title">SubTitle</string>
    <string name="reason">Årsag</string>
    <string name="not_relevant">Ikke relevant</string>
    <string name="potentially_relevant">Potentielt relevant</string>
    <string name="relevant">Relevant</string>
    <string name="category">Kategori</string>
    <string name="function_ability">Funktionsevnetilstand</string>
    <string name="current_level">Nuværende Niveau:</string>
    <string name="expected_level">Forventet Niveau:</string>
    <string name="subject_evaluation">Borgerens Vurdering</string>
    <string name="execution">Udførelse:</string>
    <string name="meaning_of_execution">Betydning af udførelse:</string>
    <string name="subject_wish">Borgerens ønske og mål:</string>
</resources>